# deq-vdp

./: .gitignore  README.md  check_grad.py  custom_back.py  environment.yml  example.py  pyproject.toml  setup.py
notebooks/: 0.0-bmp-XOR-toy-example.ipynb  0.0-bmp-simple-function.ipynb  0.1-bmp-simple-function.ipynb  0.2-bmp-van-der-pol-oscillator.ipynb  0.6-bmp-4-tanks.ipynb
src/deq_vdp/: core.py  solver.py  train.py  trainer.py  vdp.py
