[tool.poetry]
name = "deq-vdp"
version = "0.1.0"
description = ""
authors = ["Bruno M. Pacheco <mpacheco.bruno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.11.0"
numpy = "^1.22.3"
ipykernel = "^6.13.0"
matplotlib = "^3.5.1"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
